examples/k8stest/conf/EdgionPlugins/ResponseRewrite/HTTPRoute_default_response-rewrite.yaml
# HTTPRoute for ResponseRewrite 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: response-rewrite-test-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "response-rewrite.example.com"
  rules:
    # 1. 
    - matches:
        - path:
            type: PathPrefix
            value: /status-code
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: response-rewrite-status-code
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 2. 
    - matches:
        - path:
            type: PathPrefix
            value: /headers-set
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: response-rewrite-headers-set
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 3. 
    - matches:
        - path:
            type: PathPrefix
            value: /headers-rename
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: response-rewrite-headers-rename
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 4. 
    - matches:
        - path:
            type: PathPrefix
            value: /combined
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: response-rewrite-combined
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
